--- a/README
+++ b/README
@@ -6,6 +6,8 @@
 
 Prishtina Buses - Project
 Code writen on Javascript (Open Layers)
+Version: 2.0 - Beta
+
 Copyright (C) 2011  Altin Ukshini - altin.ukshini@gmail.com
 
 The source code is free software: you can redistribute it and/or modify
