--- a/busstops/readme
+++ b/busstops/readme
@@ -1,6 +1,6 @@
 If these data are put online:
 
-You have to change the links inside .kml files to take the icon or anything else.
+You have to change the links inside .kml to take the icon or anything else.
 
-Example line:
+Example
 <href>images/busstation.png</href> 
